[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "dopplerview"
version = "0.2.0"
description = "CLI and Streamlit application for artery/vein segmentation from Doppler holograms"
authors = [{ name = "Marius Dubosc" }]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "numpy",
    "scipy",
    "scikit-image",
    "scikit-learn",
    "opencv-python",
    "matplotlib",
    "pillow",
    "pandas",
    "tqdm",
    "PyYAML",
    "h5py",
    "onnxruntime",
    "torch",
    "torchvision",
    "streamlit",
    "typer",
]


[project.scripts]
dopplerview = "dopplerview.cli:main"


[tool.setuptools.packages.find]
where = ["."]
include = ["dopplerview*"]